# ofplang

./: README.md  pyproject.toml
ofplang/: __init__.py  __main__.py  cli.py  contracts.py  diagnostics.py  entry.py  errors.py  features.py  generics.py  identifiers.py  imports.py  nodes.py  objects.py  phases.py  references.py  scheduling.py  script.py  shape.py  traits.py  typecheck.py  types.py  validator.py  views.py  yamlnode.py
tests/: test_cli.py  test_positions.py
tests/conformance/: README.md  cases.py  test_conformance.py
tests/conformance/cases/: _baseline.yaml
tests/conformance/cases/aggregation/: multiple_independent_errors.expected.yaml  multiple_independent_errors.yaml
tests/conformance/cases/contracts/: comparison_chain.expected.yaml  comparison_chain.yaml  missing_view.expected.yaml  missing_view.yaml  parse_error.expected.yaml  parse_error.yaml  requires_references_output.expected.yaml  requires_references_output.yaml  static_false.expected.yaml  static_false.yaml  type_error.expected.yaml  type_error.yaml  unknown_view_field.expected.yaml  unknown_view_field.yaml  valid_ensures.expected.yaml  valid_ensures.yaml  valid_numeric_promotion.expected.yaml  valid_numeric_promotion.yaml  valid_requires.expected.yaml  valid_requires.yaml
tests/conformance/cases/entry/: implicit_main.expected.yaml  implicit_main.yaml  no_entry.expected.yaml  no_entry.yaml  recursive_dependency.expected.yaml  recursive_dependency.yaml  unknown_entry.expected.yaml  unknown_entry.yaml
tests/conformance/cases/extensions/: x_feature_tolerant.expected.yaml  (+6 more)
(+209 files in other folders)
